Made the assets folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <div class="intro">
         <h1>FULL STACK WEB DEVELOPER</h1>
-        
+        <div class="contactInfo">
+            <img src="./Assets/github.png">
+            <img src="./Assets/medium.svg">
+            <img src="./Assets/youtube.png">
+        </div>
     </div>
 </body>
 </html>
