--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <div class="intro">
         <h1>FULL STACK WEB DEVELOPER</h1>
+        <div>
+            <p>Hi my name is Akshat Malik</p>
+        </div>
         <div class="contactInfo">
             <img src="./Assets/github.png">
             <img src="./Assets/medium.svg">
